fix various slot alignment issues

--- a/core/src/components/textarea/textarea.scss
+++ b/core/src/components/textarea/textarea.scss
@@ -667,8 +667,10 @@
   @include margin(8px, 0px, 0px, 0px);
 }
 
-:host(.textarea-label-placement-stacked) ::slotted([slot='start'], [slot='end']),
-:host(.textarea-label-placement-floating) ::slotted([slot='start'], [slot='end']) {
+:host(.textarea-label-placement-stacked) ::slotted([slot='start']),
+:host(.textarea-label-placement-stacked) ::slotted([slot='end']),
+:host(.textarea-label-placement-floating) ::slotted([slot='start']),
+:host(.textarea-label-placement-floating) ::slotted([slot='end']) {
   margin-top: 8px;
 }
 
@@ -710,16 +712,25 @@
 // Start/End Slots
 // ----------------------------------------------------------------
 
-::slotted([slot="start"], [slot="end"]) {
+.start-slot-wrapper, .end-slot-wrapper {
   @include padding(var(--padding-top), 0, var(--padding-bottom), 0);
 
+  display: flex;
+
   align-self: start;
+
+  flex-shrink: 0;
 }
 
-::slotted([slot="start"]) {
+::slotted([slot='start']),
+::slotted([slot='end']) {
+  margin-top: 0; // ensure slot content is vertically aligned with label
+}
+
+::slotted([slot='start']) {
   margin-inline-end: $form-control-label-margin;
 }
 
-::slotted([slot="end"]) {
+::slotted([slot='end']) {
   margin-inline-start: $form-control-label-margin;
 }
